Fix Confirmation Style to be More Responsive
Fix the confirmation style to be more responsive to mobile and not
become too small on smaller screens.

--- a/src/sass/confirmation/_Confirmation.scss
+++ b/src/sass/confirmation/_Confirmation.scss
@@ -1,5 +1,6 @@
 .Confirmation {
     width: 30%;
+    min-width: 290px;
     margin: 40px auto;
     padding: 25px;
     border: 1px solid $color-dashboard;
